Report: StochasticSupervisor source.

--- a/report/lab2.tex
+++ b/report/lab2.tex
@@ -140,6 +140,10 @@ morekeywords={*,...}            % if you want to add more keywords to the set
     \item Графический интерфейс пользователя.
 \end{enumerate}
 
+\section{Реализация стохастического алгоритма обучения}
+\lstinputlisting{include/StochasticSupervisor.hpp}
+\lstinputlisting{src/StochasticSupervisor.cpp}
+
 \section{Описание интерфейса}
 \includepicture{TrainingDialogRunning}{Процесс обучения}{1}
 \includepicture{TrainingDialogSuccess}{Обучение успешно завершено}{1}
