Report: lab2 fix.

--- a/report/lab2.tex
+++ b/report/lab2.tex
@@ -140,7 +140,7 @@ morekeywords={*,...}            % if you want to add more keywords to the set
     \item Графический интерфейс пользователя.
 \end{enumerate}
 
-\section{Реализация стохастического алгоритма обучения}
+\section{Реализация стохастического метода обучения}
 \lstinputlisting{include/StochasticSupervisor.hpp}
 \lstinputlisting{src/StochasticSupervisor.cpp}
 
